# Banana

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CODE_STYLE.md  PLAN.md  PRD.md  TDD.md  spec-backend.md  spec-frontend.md
docs/plans/: 2026-03-15-model-capabilities-tags.md  2026-03-17-fullstack-architecture-refactor.md  2026-03-18-fullstack-refactor-final-closure.md  2026-03-19-home-chat-refactor-design.md  2026-03-19-home-chat-refactor.md  2026-03-21-chat-capability-controls-and-observability.md  2026-03-21-liquid-glass-app-refactor.md  2026-03-21-runtime-migration-closure.md  2026-03-21-version-management.md  2026-03-22-desktop-real-machine-checklist.md  2026-03-22-liquid-glass-runtime-phase-4.md  2026-03-22-liquid-glass-unification-phase-2.md  2026-03-22-liquid-glass-unification-phase-3.md  2026-03-22-settings-surface-refresh.md
scripts/: changelog-manager.mjs  changelog-tools.mjs  release-prepare.mjs  release-tag.mjs  release-tools.mjs  version-manager.mjs  version-tools.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/db/: mod.rs  model_store.rs  models.rs  provider_store.rs
src-tauri/src/domain/: chat.rs  mcp.rs  mod.rs  models.rs
src-tauri/src/services/: chat.rs  mcp.rs  mod.rs  models.rs  update.rs
src/__tests__/: next-config.test.ts
src/lib/: db.ts  (+8 more)
(+162 files in other folders)
