[package]
name = "Banana"
version = "0.1.0"
authors = ["FruitsAI"]
description = "A local-first desktop AI assistant built with Next.js, Tauri, and SQLite."
license = "UNLICENSED"
repository = "https://github.com/FruitsAI/Banana"
homepage = "https://github.com/FruitsAI/Banana"
default-run = "Banana"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "banana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
